fixing cart icon

--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -70,9 +70,11 @@ body {
 // Other Overrides
 ::selection {
   background: @link-hover-color; /* WebKit/Blink Browsers */
+  color: #fff;
 }
 ::-moz-selection {
   background: @link-hover-color; /* Gecko Browsers */
+  color: #fff;
 }
 
 section {
