--- a/app/views/sell/index.html.erb
+++ b/app/views/sell/index.html.erb
@@ -10,25 +10,14 @@
 </section><!-- /.masthead -->
 <section>
 	<div class="container">
-		<div class="row">
-			<h2 class="text-center">What can you sell on Leema?</h2>
-			<div class="col-sm-6 col-sm-offset-3">
-				<h3><span class="check"><i class="fa fa-check-circle-o"></i></span> Can it be shipped or delivered?</h3>
-				<h3><span class="check"><i class="fa fa-check-circle-o"></i></span> Is your product edible?</h3>
-				<h3><span class="check"><i class="fa fa-check-circle-o"></i></span> Is your product your passion?</h3>
-			</div>
-		</div>
-	</div>
-</section>
-<section>
-	<div class="container">
+		<h2 class="text-center">Why Sell On Leema?</h2>
 		<div class="row icon-blurb">
 			<div class="icon">
 				<i class="fa fa-money"></i>
 			</div><!-- close .col-sm-3 -->
 			<div class="blurb">
-				<h3>Free to Use</h3>
-				<p>Open your store and list your products on Leema...for FREE. Once you sell an item (mazel tov!), we take 10% of the item price, not including tax or shipping. We get paid, when you get paid. It’s that simple.</p>
+				<h3>Your Own Store</h3>
+				<p>Ever dream about having your own store? Now you’ve got one! Leema gives you a fully customizable online storefront that will allow you to promote your brand. With just a few clicks, your store will be open for business!</p>
 			</div>
 		</div><!-- close .row -->
 		<div class="row icon-blurb">
