--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -48,6 +48,13 @@
         <div class="form-group">
           <%= f.label :cover_photo %>
           <%= f.file_field :cover_photo %>
+          <p class="help-block">Brandable image that appears at the top of your profile page.</p>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :profile_photo %>
+          <%= f.file_field :profile_photo %>
+          <p class="help-block">Upload an image of yourself or your brand's logo.</p>
         </div>
 
         <div class="form-group">
