--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -36,7 +36,7 @@
                 <h3><%= truncate(product.name, :length => 50) %></h3>
 
 
-              <p class="product-description"><%= truncate(product.description, :length => 70) %></p>
+              <p class="product-description"><%= truncate(product.leema_description, :length => 70) %></p>
 
 
               <p class="product-price" itemprop="price"><%= display_price(product) %></p>
