--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -66,7 +66,7 @@
               <% end %>
               <div class="product-info">
                 <h3><%= truncate(product.name, :length => 50) %></h3>
-                <p class="product-description"><%= truncate(product.description, :length => 70) %></p>
+                <p class="product-description"><%= truncate(product.leema_description, :length => 70) %></p>
                 <p class="product-price" itemprop="price"><%= product.price %></p>
               </div><!-- close .product-info -->
 
