--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -50,36 +50,36 @@
 		<h2 class="text-center">Some Really Trendy Phrase</h2>
 		<div class="row">
 			<div class="col-sm-4">
-				<i class="fa fa-recycle"></i>
-				<h4>Your Own Store</h4>
-				<p>Ever dream about having your own store? Now you’ve got one! Leema gives you a fully customizable online storefront that will allow you to promote your brand. With just a few clicks, your store will be open for business!</p>
-			</div>
-			<div class="col-sm-4">
-				<i class="fa fa-cutlery"></i>
-				<h4>Out of the Box</h4>
-				<p>Leema gives you a robust selling, payment processing, and marketing platform for free! When your item sells, we collect a 10% fee on the sale price. Get back to what you love to do, let us take care of the rest. Don’t you wish everything was this simple?</p>
+				<i class="fa fa-spoon"></i>
+				<h4>Designed To Eat</h4>
+				<p>Leema Artisans only make the most mouthwatering, unique, and creative food items. From savory Cookie Nut Butter to sweet Gluten Free Cake Bites, if it’s delicious, you’ll find it on Leema.</p>
 			</div>
 			<div class="col-sm-4">
 				<i class="fa fa-heart"></i>
 				<h4>Made With Love</h4>
-				<p>Every product that our merchants create is painstakingly prepared to be of the highest quality. Putting their heart and souls into creating the best, you can feel confident that you are receiving a truly exceptional creation.</p>
+				<p>Every product that our Artisans create is prepared to be of the highest quality. Putting their hearts and souls into creating the best, you can feel confident that you are receiving a truly exceptional creation.</p>
+			</div>
+			<div class="col-sm-4">
+				<i class="fa fa-child"></i>
+				<h4>Something For Everyone</h4>
+				<p>Keeping Kosher? Allergic to wheat, soy, peanuts, milk, or your creepy neighbors cat? Not a problem! Leema Artisans offer tasty treats that tend to any Food Sensitivity you may have. Eat with confidence, not an EpiPen&reg;.</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-sm-4">
 				<i class="fa fa-truck"></i>
-				<h4>Delivery</h4>
-				<p>Whether you’re 2 miles or 200 miles away, our network of local and national delivery services will ensure that you will always receive your product fresh and undamaged. It’s as if your package is their own child.</p>
+				<h4>At Your Door</h4>
+				<p>Whether you’re 2 or 200 miles away, our network of local and national delivery services will ensure that you always receive your product fresh and undamaged.</p>
 			</div>
 			<div class="col-sm-4">
 				<i class="fa fa-users"></i>
-				<h4>Join the Community</h4>
-				<p>Leema’s community revolves around the creations that are bought and sold, allowing makers to share stories, recipes, secrets, and ideas. This is a community that truly sees food for what it is, an expression of the person who created it.</p>
+				<h4>Better With Friends</h4>
+				<p>Leema’s community revolves around exceptional creations that are bought and sold, allowing Artisans to share stories, recipes, secrets, and ideas. This community truly sees food for what it is, an expression of the person who created it.</p>
 			</div>
 			<div class="col-sm-4">
 				<i class="fa fa-shield"></i>
-				<h4>Secure Checkout</h4>
-				<p>Using Stripe to process all transactions, we give you the peace of mind that your information is safe every time you make a purchase or sell a product. Whether paying by credit card, debit card, check, doubloons, sheckles, or shillings, your information is safe and secure.</p>
+				<h4>Highly Guarded Checkout</h4>
+				<p>Using Stripe to process all transactions, we give you the peace of mind that you are safe when you make a purchase or sell a product. Whether paying by credit card, debit card, doubloons, sheckles, or shillings, your information is safe and secure.</p>
 				<p>
 			</div>
 		</div>
