pulling large image for products

--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -28,7 +28,7 @@
             <%#-= large_image(product, :itemprop => "image", :class => 'img-responsive center-block') -%>
 
 
-            <div class="product-image background-image" style="background-image: url(<%= image_url product.images.first.attachment.url %>);"></div>
+            <div class="product-image background-image" style="background-image: url(<%= image_url product.images.first.attachment.url(:large) %>);"></div>
 
             <div class="product-info">
 
