responsive style updates

--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -145,6 +145,35 @@ h6, .h6 {
 	}
 }
 
+@media screen and (max-width: 500px) {
+	h1, .h1 {
+		font-size: 26px;
+		margin-top: 20px;
+		margin-bottom:	10px;
+	}
+
+	h2, .h2 {
+		font-size: 23px;
+		margin-top: 20px;
+		margin-bottom: 10px;
+	}
+
+	h3, .h3 {
+		font-size: 20px;
+	}
+
+	h4, .h4 {
+		font-size: 16px;
+	}
+
+	h5, .h5 {
+		font-size: 13px;
+	}
+
+	h6, .h6 {
+		font-size: 11px;
+	}
+}
 
 p {
 	padding: 0px;
@@ -533,5 +562,22 @@ footer ul.social li a:hover {
 @media only screen and (max-width: 767px){
 	.footer-links, .copyright {
 		text-align: center;
+	}
+}
+
+@media screen and (max-width: 440px) {
+	.footer-links {
+		.btn.btn-primary {
+			margin-top: 5px;
+		}
+	}
+}
+
+@media screen and (max-width: 330px) {
+	footer ul.social li a {
+		font-size: 20px;
+		width: 40px;
+		height: 40px;
+		padding: 3px;
 	}
 }
