--- a/app/assets/stylesheets/welcome/welcome.css.scss
+++ b/app/assets/stylesheets/welcome/welcome.css.scss
@@ -21,6 +21,11 @@
 @media screen and (max-width: 768px) {
     .intro {
         opacity: 1;
+
+        h1 {
+            margin-bottom: 30px;
+            color: #fff;
+        }
     }
 }
 
@@ -280,6 +285,14 @@
     }
 }
 
+@media only screen and (max-width: 767px){
+    #features-benefits {
+
+        .row + .row {
+            padding:0px;
+        }
+    }  
+}
 section {
     h2 {
         margin-top: 0px;
