--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -26,6 +26,7 @@
           </div><!-- /input-group -->
           <% end %>
           <li><%= link_to "Browse", spree_path %></li>
+          <li id="link-to-cart" data-hook><%= link_to_cart %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= image_tag current_user.gravatar_url, class: 'gravatar' %><%= current_user.first_name %> <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
@@ -41,6 +42,7 @@
         <% else %>
           <li><%= link_to "Browse", spree_path %></li>
           <li><%= link_to "Log In", signin_path %></li>
+          <li id="link-to-cart" data-hook><%= link_to_cart %></li>
           <li><%= link_to "Register", register_path %></li>
         <% end %>
       </ul>
