--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -53,7 +53,7 @@
 
         <div class="form-group">
           <%= f.label :profile_photo %>
-          <%= f.file_field :profile_photo %>
+          <%= f.file_field :avatar %>
           <p class="help-block">Upload an image of yourself or your brand's logo.</p>
         </div>
 
