--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -58,9 +58,9 @@
             <%= link_to 'store/products/' + product.id.to_s, :class => 'product-link', :itemprop => "name", :title => product.name do %>
             <div class="product-card">
               <% if product.photo_file_name? %>
-                <div class="product-image background-image" style="background-image: url(<%= image_url product.photo.url %>);"></div>
+                <div class="product-image background-image" style="background-image: url(<%= image_url product.images.first.attachment.url(:large) %>);"></div>
               <% elsif image_url product.images.first.attachment_file_name? %>
-                <div class="product-image background-image" style="background-image: url(<%= image_url product.images.first.attachment.url %>);"></div>
+                <div class="product-image background-image" style="background-image: url(<%= image_url product.images.first.attachment.url(:large) %>);"></div>
               <% else %>
                 <div class="product-image background-image" style="background-image: url(<%= image_tag("profile-placeholder.jpg")%>"></div>
               <% end %>
