--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -27,7 +27,11 @@
     <div class="row">
       <div class="col-sm-4">
         <div class="profile-image">
+        <% if @user.avatar_file_name? %>
+          <%= image_tag @user.avatar.url(:medium), class: 'img-thumbnail img-responsive' %>
+        <% else %>
           <%= image_tag @user.gravatar_url, class: 'img-thumbnail img-responsive' %>
+        <% end %>
         </div>
         <h3><%= @user.full_name %></h3>
         <p class="text-muted"><i class="fa fa-map-marker"></i>  <%= @user.city %>, <%= @user.state %></p>
