--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -48,7 +48,7 @@
         <div class="form-group">
           <%= f.label :cover_photo %>
           <%= f.file_field :cover_photo %>
-          <p class="help-block">Brandable image that appears at the top of your profile page. Recommended size: 1900px x 665</p>
+          <p class="help-block">Brandable image that appears at the top of your profile page. Recommended size: 1900px x 665px</p>
         </div>
 
         <div class="form-group">
