changing cart link and display price on profile page

--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -272,6 +272,10 @@ textarea {
 	border-top:none;
 }
 
+#link-to-cart .cart-info .fa-shopping-cart {
+	font-size: 18px;
+}
+
 .gravatar {
 	width: 20px;
 	margin-right: 3px;
