--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,13 +19,13 @@
         <% end %>
 
         <div class="form-group">
-          <%= f.label :password %>
+          <%= f.label :new_password %>
           <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
           <p class="help-block">(leave blank if you don't want to change it)</p>
         </div>
 
         <div class="form-group">
-          <%= f.label :password_confirmation %>
+          <%= f.label :new_password_confirmation %>
           <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
         </div>
 
@@ -52,9 +52,15 @@
         </div>
 
         <div class="form-group">
-          <%= f.label :profile_photo %>
+          <%= f.label :store_logo %>
+          <%= f.file_field :logo %>
+          <p class="help-block">Recommended size 200px x 200px.</p>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :your_face %>
           <%= f.file_field :avatar %>
-          <p class="help-block">Upload an image of yourself or your brand's logo.</p>
+          <p class="help-block">Recommended size 200px x 200px.</p>
         </div>
 
         <div class="form-group">
