updating homepage copy

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -34,20 +34,9 @@
 
 </section>
 
-<section class="text-break">
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-12 text-center">
-				<h2>Exceptional Creations</h2>
-				<p>Every product that is sold on Leema is created with passion from the heart and soul of its’ creator. We built Leema to build a community of people who have a passion for creating exceptional products as well as enable them to share their creations with the entire country. We believe in passion and perfection which is why every product sold on Leema is nothing short of exceptional.</p>
-			</div>
-		</div><!-- close .row -->
-	</div><!-- close .container -->
-</section>
-
 <section id="features-benefits">
 	<div class="container">
-		<h2 class="text-center">Some Really Trendy Phrase</h2>
+		<h2 class="text-center">Exceptional Creations</h2>
 		<div class="row">
 			<div class="col-sm-4">
 				<i class="fa fa-spoon"></i>
