--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -50,12 +50,14 @@
           <%= f.file_field :cover_photo %>
           <p class="help-block">Brandable image that appears at the top of your profile page. Recommended size: 1900px x 665px</p>
         </div>
-
-        <div class="form-group">
-          <%= f.label :store_logo %>
-          <%= f.file_field :logo %>
-          <p class="help-block">Recommended size 200px x 200px.</p>
-        </div>
+        
+        <% if @user.supplier? %>
+          <div class="form-group">
+            <%= f.label :store_logo %>
+            <%= f.file_field :logo %>
+            <p class="help-block">Recommended size 200px x 200px.</p>
+          </div>
+        <% end %>
 
         <div class="form-group">
           <%= f.label :your_face %>
