--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -34,7 +34,9 @@
         <% end %>
         </div>
         <h3><%= @user.full_name %></h3>
-        <p class="text-muted"><i class="fa fa-map-marker"></i>  <%= @user.city %>, <%= @user.state %></p>
+        <% if @user.city? && @user.state? %>
+          <p class="text-muted"><i class="fa fa-map-marker"></i>  <%= @user.city %>, <%= @user.state %></p>
+        <% end %>
         <p class="text-muted"><i class="fa fa-clock-o"></i> Joined <%= @user.created_at.strftime('%B %Y') %></p>
         <% if @user.supplier? %>
           <p class="text-muted"><%= @supplier.products.count %> Products Listed</p>
