fixing footer padding and adding mailto link

--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -528,6 +528,10 @@ footer {
 	.bottom {
 		padding: 15px 0 10px;
 		background: darken(@body-bg, 15%);
+
+		.container {
+			padding-top: 0px !important;
+		}
 	}
 
 	p {
