--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -22,7 +22,7 @@
         <div class="col-sm-8 col-xs-12">
           <ul class="list-inline footer-links">
             <li><a href="#">Terms of Service</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="mailto:leemaeats@gmail.com?subject=Yo+Leema%21&body=Tell+us+what%27s+on+your+mind">Contact Us</a></li>
             <li><a href="#">Privacy Policy</a></li>
             <li><a href="/sell/" class="btn btn-primary">Become a Seller</a></li>
           </ul>
