--- a/app/views/spree/admin/products/index.html.erb
+++ b/app/views/spree/admin/products/index.html.erb
@@ -2,11 +2,13 @@
   <%= Spree.t(:listing_products) %>
 <% end %>
 
+<!--Removing the New Product button
 <% content_for :page_actions do %>
   <li id="new_product_link">
     <%= button_link_to Spree.t(:new_product), new_object_url, { :remote => true, :icon => 'plus', :id => 'admin_new_product' } %>
   </li>
 <% end if can?(:create, Spree::Product) %>
+-->
 
 <%= render :partial => 'spree/admin/shared/product_sub_menu' %>
 
@@ -78,13 +80,11 @@
       <% @collection.each do |product| %>
           <tr <%== "style='color: red;'" if product.deleted? %> id="<%= spree_dom_id product %>" data-hook="admin_products_index_rows" class="<%= cycle('odd', 'even') %>">
             <td class="align-center"><%= product.sku rescue '' %></td>
-            <td class="align-center">asdf;lkajsdf;lk</td>
+            <td class="align-center"></td>
             <td><%= link_to product.try(:name), edit_admin_product_path(product) %></td>
             <td class="align-center"><%= product.display_price.to_html rescue '' %></td>
             <td class="actions" data-hook="admin_products_index_row_actions">
               <%= link_to_edit product, :no_text => true, :class => 'edit' if can?(:edit, product) && !product.deleted? %>
-              &nbsp;
-              <%= link_to_clone product, :no_text => true, :class => 'clone' if can?(:clone, product) %>
               &nbsp;
               <%= link_to_delete product, :no_text => true if can?(:delete, product) && !product.deleted? %>
             </td>
