Updated suppliers page

--- a/app/views/spree/admin/suppliers/_form.html.erb
+++ b/app/views/spree/admin/suppliers/_form.html.erb
@@ -12,11 +12,11 @@
     <legend><%= Spree.t('supplier_details') %></legend>
     <%= form.field_container :name do %>
       <%= form.label :name, Spree::Supplier.human_attribute_name(:name) %>:<br />
-      <%= form.text_field :name, :class => 'fullwidth title' %>
+      <%= form.text_field :name, :class => 'fullwidth title', :value => spree_current_user.full_name %>
     <% end %>
     <%= form.field_container :email do %>
       <%= form.label :email, Spree::Supplier.human_attribute_name(:email) %>:<br />
-      <%= form.email_field :email, :class => 'fullwidth text' %>
+      <%= form.email_field :email, :class => 'fullwidth text', :value => spree_current_user.email %>
     <% end %>
     <%= form.field_container :url do %>
       <%= form.label :url, Spree::Supplier.human_attribute_name(:url) %>:<br />
@@ -26,14 +26,14 @@
       <%= form.label :tax_id, Spree::Supplier.human_attribute_name(:tax_id) %>:<br />
       <%= form.text_field :tax_id, :class => 'fullwidth text' %>
     <% end %>
-    <% if spree_current_user.admin? %>
+    <% if spree_current_user.leema_admin? == true %>
       <%= form.field_container :commission_flat_rate do %>
         <%= form.label :commission_flat_rate, Spree::Supplier.human_attribute_name(:commission_flat_rate) %>:<br />
         <%= form.text_field :commission_flat_rate, :class => 'fullwidth text' %>
       <% end %>
       <%= form.field_container :commission_percentage do %>
         <%= form.label :commission_percentage, Spree::Supplier.human_attribute_name(:commission_percentage) %>:<br />
-        <%= form.text_field :commission_percentage, :class => 'fullwidth text' %>
+        <%= form.text_field :commission_percentage, :class => 'fullwidth text', :value => '10' %>
       <% end %>
       <%= form.field_container :users do %>
         <%= form.label :users %><br/>
@@ -41,7 +41,7 @@
       <% end %>
       <%= form.field_container :active do %>
         <%= form.label :active, Spree::Supplier.human_attribute_name(:active) %>:<br />
-        <%= form.check_box :active %>
+        <%= form.check_box :active, :checked => true %>
       <% end %>
     <% end %>
     <div class='center'>
