--- a/app/views/spree/admin/products/index.html.erb
+++ b/app/views/spree/admin/products/index.html.erb
@@ -7,6 +7,10 @@
 <% content_for :table_filter_title do %>
   <%= Spree.t(:search) %>
 <% end %>
+<!--TODO set up products scoped to the supplier -->
+<!--<%= @user.supplier.products.each do |product| %>
+  <%= product.name %>
+<% end %>-->
 
 <% content_for :table_filter do %>
   <div data-hook="admin_products_sidebar">
