responsive styles for cart

--- a/app/assets/stylesheets/spree/frontend/screen.css.scss
+++ b/app/assets/stylesheets/spree/frontend/screen.css.scss
@@ -1097,6 +1097,8 @@ div[data-hook="inside_cart_form"] {
   }
 }
 
+
+
 #empty-cart {
 
 }
@@ -1250,6 +1252,10 @@ table.order-summary {
     #subtotal {
       text-align: right;
     }
+  }
+
+  .coupon-code {
+    margin-bottom: 20px;
   }
 }
 
