adding sell icons

--- a/app/views/sell/index.html.erb
+++ b/app/views/sell/index.html.erb
@@ -13,7 +13,7 @@
 		<h2 class="text-center">Why Sell On Leema?</h2>
 		<div class="row icon-blurb">
 			<div class="icon">
-				<i class="fa fa-money"></i>
+				<%= image_tag "storefront-icon.png", class: 'img-responsive center-block' %>
 			</div><!-- close .col-sm-3 -->
 			<div class="blurb">
 				<h3>Your Own Store</h3>
@@ -22,7 +22,7 @@
 		</div><!-- close .row -->
 		<div class="row icon-blurb">
 			<div class="icon">
-				<i class="fa fa-clock-o"></i>
+				<%= image_tag "clock-icon.png", class: 'img-responsive center-block' %>
 			</div><!-- close .col-sm-3 -->
 			<div class="blurb">
 				<h3>It Only Takes Minutes</h3>
@@ -31,7 +31,7 @@
 		</div><!-- close .row -->
 		<div class="row icon-blurb">
 			<div class="icon">
-				<i class="fa fa-compass"></i>
+				<%= image_tag "discovery-icon.png", class: 'img-responsive center-block' %>
 			</div><!-- close .col-sm-3 -->
 			<div class="blurb">
 				<h3>Discovery Made Easy</h3>
