readding storefront icon

--- a/app/views/sell/index.html.erb
+++ b/app/views/sell/index.html.erb
@@ -13,7 +13,7 @@
 		<h2 class="text-center">Why Sell On Leema?</h2>
 		<div class="row icon-blurb">
 			<div class="icon">
-				<%= image_tag "storefront-icon.png", class: 'img-responsive center-block' %>
+				<%= image_tag "yourstore-icon.png", class: 'img-responsive center-block' %>
 			</div><!-- close .col-sm-3 -->
 			<div class="blurb">
 				<h3>Your Own Store</h3>
