--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -84,19 +84,19 @@
 				<div class="row">
 					<div class="col-sm-4">
 						<div class="circle">
-							<i class="fa fa-shopping-cart"></i>
+							<%= image_tag "shop-icon.png", class: 'img-responsive center-block' %>
 						</div>
 						<h4>Shop our products</h4>
 					</div><!-- close .col-sm-4 -->
 					<div class="col-sm-4">
 						<div class="circle">
-							<i class="fa fa-money"></i>
+							<%= image_tag "money-icon.png", class: 'img-responsive center-block' %>
 						</div>
 						<h4>Make your purchase</h4>
 					</div><!-- close .col-sm-4 -->
 					<div class="col-sm-4">
 						<div class="circle">
-							<i class="fa fa-smile-o"></i>
+							<%= image_tag "smile-icon.png", class: 'img-responsive center-block' %>
 						</div>
 						<h4>Enjoy Deliciousness</h4>
 					</div><!-- close .col-sm-4 -->
