--- a/app/views/sell/index.html.erb
+++ b/app/views/sell/index.html.erb
@@ -3,7 +3,7 @@
 		<div class="row">
 			 <div class="col-xs-12 intro">
 				<h1>Let Everyone Taste Your Passion</h1>
-				<a href="#" class="btn btn-lg btn-primary">Sell With Leema</a>
+				<a href="/store/admin/suppliers/new" class="btn btn-lg btn-primary">Sell With Leema</a>
 		  </div>
 		</div>
   </div><!-- /.container -->
