tweaking alert styles for backend

--- a/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
+++ b/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
@@ -43,6 +43,14 @@ $icon-font-path: "../../bootstrap/";
 .alert-alert { @extend .alert-info; }
 .alert-notice { @extend .alert-info; }
 
+.alert p, .alert li {
+  color: #676767;
+}
+
+.alert li {
+  list-style: none;
+}
+
 .product-body {
   height: 170px;
 }
