only populate fields for new suppliers

--- a/app/views/spree/admin/shared/_address_form.html.erb
+++ b/app/views/spree/admin/shared/_address_form.html.erb
@@ -1,15 +1,28 @@
 <% s_or_b = type.chars.first %>
-
 <div id="<%= type %>" data-hook="address_fields">
-  <div class="field <%= "#{type}-row" %>">
-    <%= f.label :firstname, Spree.t(:first_name) %>
-    <%= f.text_field :firstname, :class => 'fullwidth', :value => spree_current_user.first_name %>
-  </div>
+  <!-- auto populate name if they are a new supplier -->
+  <% if spree_current_user.supplier? == false %>
+    <div class="field <%= "#{type}-row" %>">
+      <%= f.label :firstname, Spree.t(:first_name) %>
+      <%= f.text_field :firstname, :class => 'fullwidth', :value => spree_current_user.first_name %>
+    </div>
 
-  <div class="field <%= "#{type}-row" %>">
-    <%= f.label :lastname, Spree.t(:last_name) %>
-    <%= f.text_field :lastname, :class => 'fullwidth', :value => spree_current_user.last_name %>
-  </div>
+    <div class="field <%= "#{type}-row" %>">
+      <%= f.label :lastname, Spree.t(:last_name) %>
+      <%= f.text_field :lastname, :class => 'fullwidth', :value => spree_current_user.last_name %>
+    </div>
+  <!-- if viewing or editing other suppliers dont autopopulate name -->
+  <% else %>
+    <div class="field <%= "#{type}-row" %>">
+      <%= f.label :firstname, Spree.t(:first_name) %>
+      <%= f.text_field :firstname, :class => 'fullwidth' %>
+    </div>
+
+    <div class="field <%= "#{type}-row" %>">
+      <%= f.label :lastname, Spree.t(:last_name) %>
+      <%= f.text_field :lastname, :class => 'fullwidth' %>
+    </div>
+  <% end %>
 
   <% if Spree::Config[:company] %>
     <div class="field <%= "#{type}-row" %>">
