--- a/app/views/sell/index.html.erb
+++ b/app/views/sell/index.html.erb
@@ -35,7 +35,7 @@
 			</div><!-- close .col-sm-3 -->
 			<div class="blurb">
 				<h3>Discovery Made Easy</h3>
-				<p>Leema gives direct access to people specifically looking to eat up the unique creations that our Culinary Artists create. This access ensures that you are targeting the right demographic and optimizing the potential of your store.</p>
+				<p>Leema provides direct access to people specifically looking to eat up the unique creations that our Culinary Artists make. This access ensures that you are targeting the right demographic and optimizing the full potential of your store.</p>
 			</div>
 		</div><!-- close .row -->
 	</div><!-- close .container -->
