updating add to cart button

--- a/app/assets/stylesheets/spree/frontend/screen.css.scss
+++ b/app/assets/stylesheets/spree/frontend/screen.css.scss
@@ -509,6 +509,13 @@ nav#taxonomies {
     vertical-align: middle;
     padding: 8px 10px;
   }
+
+  .btn {
+    padding: 10px 10px;
+    margin-left: -6px;
+    border-top: none;
+  }
+
 }
 
 #custom-order{
