--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -17,17 +17,77 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4 col-xs-12 copyright">
-          <p>&copy; Leema <%= Time.now.year %></p>
+          <a href="/"><%= image_tag "footer-logo-horizontal.png", class: 'img-responsive' %></a>
         </div>
-        <div class="col-sm-8 col-xs-12">
-          <ul class="list-inline footer-links">
-            <li><a href="#">Terms of Service</a></li>
-            <li><a href="mailto:leemaeats@gmail.com?subject=Yo+Leema%21&body=Tell+us+what%27s+on+your+mind">Contact Us</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="/sell/" class="btn btn-primary">Become a Seller</a></li>
-          </ul>
+        <div class="col-sm-5 col-xs-12">
+          <div class="row">
+            <div class="col-xs-12">
+              <h5>Need Help?</h5>
+            </div>
+            <div class="col-sm-6">
+              <ul class="list-unstyled footer-links">
+                <li><a href="#">Guidelines</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="http://blog.leema.co" target="_blank">Blog</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-6">
+              <ul class="list-unstyled footer-links">
+                <li><a href="mailto:leemaeats@gmail.com?subject=Yo+Leema%21&body=Tell+us+what%27s+on+your+mind">Email Us A Question</a></li>
+                <li><a href="mailto:leemaeats@gmail.com?subject=Feedback+Yo%21&body=Tell+us+what%27s+on+your+mind">Give Us Feedback</a></li>
+              </ul>
+            </div>
+          </div><!-- close .row -->
         </div>
+        <div class="col-sm-3 col-xs-12">
+          <h5>Treat Your Inbox</h5>
+          <!-- Begin MailChimp Signup Form -->
+          <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+          <style type="text/css">
+            /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+               We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+               #mc_embed_signup input.email{
+                  margin: 0px;
+                  padding: 6px 12px;
+                  text-indent: 0px;
+                  width: 100%;
+               }
+
+               #mc_embed_signup input {
+                border:none;
+               }
+          </style>
+          <div id="mc_embed_signup">
+          <form action="//leema.us9.list-manage.com/subscribe/post?u=fe76382460426af73d53fa5ed&amp;id=23cdff1ccd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div class="input-group">
+                <input type="email" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="Email Address" required>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;"><input type="text" name="b_fe76382460426af73d53fa5ed_23cdff1ccd" tabindex="-1" value=""></div>
+                <span class="input-group-btn">
+                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary">
+                </span>
+              </div><!-- /input-group -->
+
+          </form>
+          </div><!--End mc_embed_signup-->
+        </div><!-- close .col-sm-3 -->
       </div><!--/row-->
     </div> <!-- /container -->
   </div><!-- close .bottom -->
+  <div class="very-bottom">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <a href="/sell/" class="btn btn-primary">Become a Seller</a>
+        </div><!-- close .col-sm-6 -->
+        <div class="col-sm-6">
+          <ul class="list-inline footer-links text-right">
+            <li>&copy; Leema <%= Time.now.year %></li>
+            <li><a href="#">Terms of Service</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
+        </div><!-- close .col-sm-6 -->
+      </div><!-- close .row -->
+    </div><!-- close .container -->
+  </div><!-- close .top -->
 </footer>
