--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -526,12 +526,26 @@ footer {
 	}
 
 	.bottom {
-		padding: 15px 0 10px;
+		padding: 20px 0px;
 		background: darken(@body-bg, 15%);
 
 		.container {
 			padding-top: 0px !important;
 		}
+	}
+
+	.very-bottom {
+		padding: 20px 0;
+		background: darken(@body-bg, 15%);
+		border-top: 1px solid #C5C5C5;
+
+		.container {
+			padding-top: 0px !important;
+		}
+	}
+
+	h5 {
+		margin-top: 0px;
 	}
 
 	p {
@@ -571,9 +585,13 @@ footer ul.social li a:hover {
 }
 
 .footer-links {
-	text-align: right;
 	margin-bottom: 0px;
 	font-size: 13px;
+	text-transform: uppercase;
+
+	li {
+		margin-top: 10px;
+	}
 
 	.btn.btn-primary {
 		color: #fff;
